initial code setup

--- a/Sources/tech.macil.rustplus.sdPlugin/manifest.json
+++ b/Sources/tech.macil.rustplus.sdPlugin/manifest.json
@@ -20,7 +20,7 @@
   "Author": "Macil Tech",
   "CodePath": "code.html",
   "Description": "Control in-game smart switches",
-  "Name": "Counter",
+  "Name": "Rust+",
   "Icon": "pluginIcon",
   "URL": "https://macil.tech/streamdeck-rustplus",
   "Version": "1.0",
