add settings page that saves settings

--- a/Sources/tech.macil.rustplus.sdPlugin/manifest.json
+++ b/Sources/tech.macil.rustplus.sdPlugin/manifest.json
@@ -21,6 +21,7 @@
   "SDKVersion": 2,
   "Author": "Macil Tech",
   "CodePath": "code.html",
+  "PropertyInspectorPath": "index_pi.html",
   "Description": "Control Rust in-game smart switches",
   "Name": "Rust+",
   "Icon": "pluginIcon",
