fix missing action icon

--- a/Sources/tech.macil.rustplus.sdPlugin/manifest.json
+++ b/Sources/tech.macil.rustplus.sdPlugin/manifest.json
@@ -1,7 +1,7 @@
 {
   "Actions": [
     {
-      "Icon": "actionIcon",
+      "Icon": "Images/smart_switch",
       "Name": "Rust Smart Switch",
       "States": [
         {
