--- a/Sources/tech.macil.rustplus.sdPlugin/manifest.json
+++ b/Sources/tech.macil.rustplus.sdPlugin/manifest.json
@@ -1,45 +1,46 @@
 {
-  "Actions": [
-    {
-      "Icon": "Images/smart_switch",
-      "Name": "Rust Smart Switch",
-      "States": [
-        {
-          "Image": "Images/btn_custom_toggle_hotkey",
-          "TitleAlignment": "bottom"
-        },
-        {
-          "Image": "Images/btn_custom_toggle_hotkey_off",
-          "TitleAlignment": "bottom"
-        }
-      ],
-      "SupportedInMultiActions": false,
-      "Tooltip": "View and toggle a smart switch",
-      "UUID": "tech.macil.rustplus.smartswitch"
-    }
-  ],
-  "Category": "Rust+",
-  "CategoryIcon": "rustCategoryIcon",
-  "SDKVersion": 2,
-  "Author": "Macil Tech",
-  "CodePath": "code.html",
-  "PropertyInspectorPath": "index_pi.html",
-  "Description": "Control Rust in-game smart switches",
-  "Name": "Rust+",
-  "Icon": "pluginIcon",
-  "URL": "https://github.com/Macil/streamdeck-rustplus#readme",
-  "Version": "1.0.1",
-  "OS": [
-    {
-      "Platform": "mac",
-      "MinimumVersion": "10.11"
-    },
-    {
-      "Platform": "windows",
-      "MinimumVersion": "10"
-    }
-  ],
-  "Software": {
-    "MinimumVersion": "6.4"
-  }
+	"Actions": [
+		{
+			"Icon": "Images/smart_switch",
+			"Name": "Rust Smart Switch",
+			"States": [
+				{
+					"Image": "Images/btn_custom_toggle_hotkey",
+					"TitleAlignment": "bottom"
+				},
+				{
+					"Image": "Images/btn_custom_toggle_hotkey_off",
+					"TitleAlignment": "bottom"
+				}
+			],
+			"SupportedInMultiActions": false,
+			"Tooltip": "View and toggle a smart switch",
+			"UUID": "tech.macil.rustplus.smartswitch"
+		}
+	],
+	"Category": "Rust+",
+	"CategoryIcon": "rustCategoryIcon",
+	"SDKVersion": 2,
+	"Author": "Macil Tech",
+	"CodePath": "code.html",
+	"PropertyInspectorPath": "index_pi.html",
+	"Description": "Control Rust in-game smart switches",
+	"Name": "Rust+",
+	"Icon": "pluginIcon",
+	"URL": "https://github.com/Macil/streamdeck-rustplus#readme",
+	"Version": "1.0.2.0",
+	"UUID": "tech.macil.rustplus",
+	"OS": [
+		{
+			"Platform": "mac",
+			"MinimumVersion": "10.11"
+		},
+		{
+			"Platform": "windows",
+			"MinimumVersion": "10"
+		}
+	],
+	"Software": {
+		"MinimumVersion": "6.4"
+	}
 }
